[package]
name = "conspect"
version = "0.0.1"
authors = [
    "Christian Grabowski <christiang11754@gmail.com>"
]
license = "Apache-2.0"
repository = "https://github.com/cpg1111/conspect"
documentation = "https://github.com/cpg1111/conspect/wiki"
description = "Top for all your containers, from your host."

[dependencies]
libc = "0.2"
regex = "0.1"
